[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aliceio"
description = "Asynchronous framework for Alice from Yandex Dialogs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "K1rL3s - Kirill Lesovoy" }]
maintainers = [{ name = "K1rL3s - Kirill Lesovoy" }]
keywords = [
  "alice",
  "yandex",
  "dialogs",
  "aliceio",
  "bot",
  "api",
  "framework",
  "wrapper",
  "asyncio",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "aiofiles>=23.2.1,<24.2",
  "aiohttp>=3.9.0,<3.12",
  "certifi>=2023.7.22",
  "magic-filter>=1.0.12,<1.1",
  "pydantic>=2.4.1,<2.11",
  "typing-extensions>=4.7.0,<=5.0",
]

dynamic = ["version"]
[tool.hatch.version]
path = "aliceio/__meta__.py"

[project.optional-dependencies]
fast = [
  "uvloop>=0.17.0; (sys_platform == 'darwin' or sys_platform == 'linux') and platform_python_implementation != 'PyPy' and python_version < '3.13'",
  "uvloop>=0.21.0; (sys_platform == 'darwin' or sys_platform == 'linux') and platform_python_implementation != 'PyPy' and python_version >= '3.13'",
  "aiodns>=3.0.0",
]
redis = [
  "redis[hiredis]>=5.0.1,<5.1.0",
]
proxy = [
  "aiohttp-socks~=0.8.3",
]
test = [
  "pytest~=7.4.2",
  "pytest-html~=4.0.2",
  "pytest-asyncio~=0.21.1",
  "pytest-lazy-fixture~=0.6.3",
  "pytest-mock~=3.12.0",
  "pytest-mypy~=0.10.3",
  "pytest-cov~=4.1.0",
  "pytest-aiohttp~=1.0.5",
  "aresponses~=2.1.6",
  "pytz~=2023.3",
  "pycryptodomex~=3.19.0",
]
dev = [
  "black~=24.10.0",
  "ruff~=0.8.6",
  "mypy~=1.14.1",
  "toml~=0.10.2",
  "pre-commit~=4.0.1",
  "packaging~=24.2",
]
docs = [
  "mkdocs~=1.5.3",
  "mkdocs_material~=9.5.5",
  "mkdocstrings~=0.24.0",
  "mkdocstrings_python~=1.9.2",
  "mkdocs_autorefs~=1.0.1",
  "griffe~=0.45.0"
]

[project.urls]
Documentation = "https://aliceio.rtfd.io"
Repository = "https://github.com/K1rL3s/aliceio"

[tool.hatch.envs.default]
features = [
  "dev",
  "fast",
  "redis",
  "proxy",
]
post-install-commands = [
  "pre-commit install",
]

[tool.hatch.envs.default.scripts]
reformat = [
  "black aliceio tests examples",
  "isort aliceio tests examples",
]
lint = "ruff check aliceio tests examples"

[tool.hatch.envs.docs]
features = [
  "fast",
  "redis",
  "proxy",
  "docs",
]

[tool.hatch.envs.dev]
python = "3.12"
features = [
  "dev",
  "fast",
  "redis",
  "proxy",
  "test",
]

[tool.hatch.envs.test]
features = [
  "fast",
  "redis",
  "proxy",
  "test",
]

[tool.hatch.envs.test.scripts]
cov = [
  "pytest --cov-config pyproject.toml --cov=aliceio --html=reports/py{matrix:python}/tests/index.html {args}",
  "coverage html -d reports/py{matrix:python}/coverage",
]
cov-redis = [
  "pytest --cov-config pyproject.toml --cov=aliceio --html=reports/py{matrix:python}/tests/index.html --redis {env:REDIS_DNS:'redis://localhost:6379'} {args}",
  "coverage html -d reports/py{matrix:python}/coverage",
]
view-cov = "google-chrome-stable reports/py{matrix:python}/coverage/index.html"


[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311", "312", "313"]

[tool.ruff]
line-length = 88
src = ["aliceio", "tests", "examples"]
exclude = [
  ".git",
  "build",
  "dist",
  "venv",
  ".venv",
  "docs",
  "tests",
  "dev",
  "scripts",
  "*.egg-info",
]
target-version = "py39"
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
  "A", # flake8-builtins
  "AIR", # Airflow
  "ANN", # flake8-annotations
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "C90", # mccabe
  "COM", # flake8-commas
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "E", # Error
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "EXE", # flake8-executable
  "F", # Pyflakes
  "FAST", # FastAPI
  "FBT", # flake8-boolean-trap
  "FLY", # flynt
  "FURB", # refurb
  "G", # flake8-logging-format
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "INT", # flake8-gettext
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # NumPy-specific rules
  "PD", # pandas-vet
  "PERF", # Perflint
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL", # Pylint
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TC", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyugrade
  "YTT", # flake8-2020
]
ignore = [
  "ARG", # flake8-unused-arguments
  "CPY", # flake8-copyright
  "D", # pydocstyle
  "DOC", # pydoclint
  "EM", # flake8-errmsg
  "ERA", # eradicate
  "FA", # flake8-future-annotations
  "FBT", # flake8-boolean-trap
  "FIX", # flake8-fixme
  "I", # isort
  "A002", # Function argument {name} is shadowing a Python builtin
  "A005", # Modelu {name} is shadowing a python builtin module
  "ANN401", # any-type | Dynamically typed expressions (typing.Any) are disallowed in {name}
  "B905", # `zip()` without an explicit `strict=` parameter
  "N803", # Argument name {name} should be lowercase
  "N804", # First argument of a class method should be named `cls`
  "N805", # First argument of a method should be named `self`
  "N806", # Variable {name} in function should be lowercase
  "N815", # Variable {name} in class scope should not be mixedCase
  "PLR6201", # Use a set literal when testing for membership
  "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
  "PLR0917", # Too many positional arguments ({c_pos}/{max_pos})
  "PLR6301", # Method {name} could be a function, class method, or static method
  "PLW3201", # Dunder method {name} has no special meaning in Python 3
  "RUF001", # ambiguous-unicode-character-string | String contains ambiguous {}. Did you mean {}?
  "RUF002", # ambiguous-unicode-character-docstring | Docstring contains ambiguous {}. Did you mean {}?
  "RUF003", # ambiguous-unicode-character-comment | Comment contains ambiguous {}. Did you mean {}?
  "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "TC001", # Move application import {} into a type-checking block
  "TC002", # Move third-party import {} into a type-checking block
  "TC003", # Move standard library import {} into a type-checking block
  "TD002", # Missing author in TODO; try: # TODO(<author_name>): ... or # TODO @<author_name>: ...
  "TD003", # Missing issue link on the line following this TODO
  "TC006", # Add quotes to type expression in ``
  "TID252", # Prefer absolute imports over relative imports from parent modules
  "TRY003", # Avoid specifying long messages outside the exception class
  "UP007", # Use `X | Y` for type annotations
  "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
  "UP042", # Class StrEnum inherits from both `str` and `enum.Enum`
  "RUF029", # Function {name} is declared async, but doesn't await or use async features
  "N818", # Exception name {name} should be named with an Error suffix
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "SLF", "B", "S", "PT", "PLR", "PLC", "E721", "PGH003"]
"examples/*" = ["FURB", "ASYNC", "PTH", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
]
filterwarnings = [
  "error",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = false
parallel = true
omit = [
  "aliceio/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@overload",
]

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.9"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = [
  "aiofiles",
  "async_lru",
  "uvloop",
  "redis.*",
]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | .venv
  | docs
)
'''

[tool.isort]
profile = "black"
